fixed rest of the alignment issues

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -77,7 +77,7 @@
     .contact-info-container p,
     .nav-links li a{
        font-size: 1rem;
-       margin-right: 1rem;
+       /* margin-right: 1rem; */
     }
     .experience-sub-title{
         font-size: 1.25rem;
